--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -19,136 +19,140 @@
   </div>
   <div class='container-fluid p-0'>
     <div class='row'>
-      <ng-template [ngIf]="route.params | async  " let-routeData>
+      <ng-template [ngIf]='store.selectedFeatured$ | async' let-feature>
+        <ng-template [ngIf]='feature.name === featuredType.FEATURED_PACKS'>
+          <div class='col-lg-6 col-12'>
+            <mat-card>
+              <mat-card-content>
+                <div class='container-fluid p-0 '>
+                  <div class='row mb-3'>
+                    <div class='col-12'>
+                      <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                        General</h5>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Location</mat-label>
+                        <input matInput autocomplete='no' type='text'>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Rail Name</mat-label>
+                        <input matInput autocomplete='no' type='text'>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                </div>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </ng-template>
+        <ng-template [ngIf]='feature.name === featuredType.FEATURED_TESTS'>
+          <div class='col-lg-6 col-12'>
+            <mat-card>
+              <mat-card-content>
+                <div class='container-fluid p-0 '>
+                  <div class='row mb-3'>
+                    <div class='col-12'>
+                      <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                        General</h5>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Location</mat-label>
+                        <input matInput autocomplete='no' type='text' disabled>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                </div>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </ng-template>
+        <ng-template [ngIf]='feature.name === featuredType.SPOTLIGHT'>
+          <div class='col-lg-6 col-12'>
 
-
-        <div class='col-lg-6 col-12' *ngIf="name === featuredType.SPOTLIGHT">
-          <mat-card>
-            <mat-card-content>
-              <div class='container-fluid p-0 '>
-                <div class='row mb-3'>
-                  <div class='col-12'>
-                    <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                      General</h5>
+            <mat-card>
+              <mat-card-content>
+                <div class='container-fluid p-0 '>
+                  <div class='row mb-3'>
+                    <div class='col-12'>
+                      <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                        General</h5>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Location</mat-label>
+                        <input matInput autocomplete='no' type='text'>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Rail Name</mat-label>
+                        <input matInput autocomplete='no' type='text'>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Heading</mat-label>
+                        <input matInput autocomplete='no' type='text'>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Subheading</mat-label>
+                        <input matInput autocomplete='no' type='text'>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class='row mb-2'>
+                    <div class='col-12'>
+                      <mat-form-field class='w-100'>
+                        <mat-label>Button Text</mat-label>
+                        <input matInput autocomplete='no' type='text'>
+                      </mat-form-field>
+                    </div>
                   </div>
                 </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Location</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
+                <div class='container-fluid p-0 '>
+                  <div class='row mb-3'>
+                    <div class='col-12'>
+                      <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
+                        Media</h5>
+                    </div>
+                  </div>
+                  <div class='row mb-3'>
+                    <div class='col-12'>
+                      <p class='text-muted mb-2'>Poster</p>
+                      <button
+                        mat-stroked-button
+                        color='primary' type='submit'>
+                        Upload
+                      </button>
+                    </div>
                   </div>
                 </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Rail Name</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Heading</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Subheading</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Button Text</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
-              </div>
-              <div class='container-fluid p-0 '>
-                <div class='row mb-3'>
-                  <div class='col-12'>
-                    <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
-                      Media</h5>
-                  </div>
-                </div>
-                <div class='row mb-3'>
-                  <div class='col-12'>
-                    <p class='text-muted mb-2'>Poster</p>
-                    <button
-                      mat-stroked-button
-                      color='primary' type='submit'>
-                      Upload
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
-        <div class='col-lg-6 col-12' *ngIf="routeData['featured-name-enum'] === featuredType.FEATURED_PACKS">
-          <mat-card>
-            <mat-card-content>
-              <div class='container-fluid p-0 '>
-                <div class='row mb-3'>
-                  <div class='col-12'>
-                    <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                      General</h5>
-                  </div>
-                </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Location</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Rail Name</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
-
-        <div class='col-lg-6 col-12' *ngIf="routeData['featured-name-enum'] === featuredType.FEATURED_TESTS">
-          <mat-card>
-            <mat-card-content>
-              <div class='container-fluid p-0 '>
-                <div class='row mb-3'>
-                  <div class='col-12'>
-                    <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                      General</h5>
-                  </div>
-                </div>
-                <div class='row mb-2'>
-                  <div class='col-12'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Location</mat-label>
-                      <input matInput autocomplete='no' type='text' disabled>
-                    </mat-form-field>
-                  </div>
-                </div>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </ng-template>
       </ng-template>
-
+      <!--      Content Section-->
       <div class='col-lg-6 col-12'>
         <mat-card>
           <mat-card-title class='d-flex justify-content-between align-items-center'>
@@ -156,27 +160,27 @@
             <button
               mat-flat-button
               class='ml-3'
-              [matMenuTriggerFor]="menuPack"
+              [matMenuTriggerFor]='menuPack'
               color='primary' type='submit'>
               Add
             </button>
-            <mat-menu #menuPack="matMenu">
-              <button mat-menu-item  (click)='openTestSelector()'>
+            <mat-menu #menuPack='matMenu'>
+              <button mat-menu-item (click)='openTestSelector()'>
                 <span>Test</span>
               </button>
-              <button mat-menu-item >
+              <button mat-menu-item>
                 <span>Test Group</span>
               </button>
-              <button mat-menu-item  >
+              <button mat-menu-item>
                 <span>Packs</span>
               </button>
-              <button mat-menu-item  >
+              <button mat-menu-item>
                 <span>Questionnaire</span>
               </button>
             </mat-menu>
           </mat-card-title>
           <mat-divider></mat-divider>
-          <mat-card-content >
+          <mat-card-content>
 
             <div class='pt-3' cdkDrag>
               <mat-card class='question-card mat-elevation-z3 pt-1 pr-1'>
@@ -187,11 +191,11 @@
                       <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #menu='matMenu'>
-                      <button type='button'  mat-menu-item>
+                      <button type='button' mat-menu-item>
                         <mat-icon>create</mat-icon>
                         <span>Edit</span>
                       </button>
-                      <button type='button'  mat-menu-item>
+                      <button type='button' mat-menu-item>
                         <mat-icon>delete</mat-icon>
                         <span>Delete</span>
                       </button>
@@ -200,7 +204,9 @@
                 </div>
                 <h5
                   class='mat-h5 d-flex align-items-center text-color__primary mb-0 mr-2 type-icon font-calibri'>
-                  <mat-icon class='d-flex align-items-center'  aria-hidden="false" aria-label="fiber manual record">fiber_manual_record</mat-icon>
+                  <mat-icon class='d-flex align-items-center' aria-hidden='false' aria-label='fiber manual record'>
+                    fiber_manual_record
+                  </mat-icon>
                   <span>Pack</span>
                 </h5>
               </mat-card>
@@ -212,6 +218,5 @@
 
     </div>
   </div>
-</div>
 
 
