--- a/libs/featured/featured-listing/src/lib/featured-listing.component.html
+++ b/libs/featured/featured-listing/src/lib/featured-listing.component.html
@@ -2,7 +2,7 @@
   <div class='container-fluid p-0'>
     <div class='row'>
       <div class='col-3'>
-        <mat-form-field class='w-100'>
+        <mat-form-field hidden class='w-100'>
           <mat-label>Search</mat-label>
           <input matInput>
           <button mat-icon-button matSuffix *ngIf='false'>
@@ -27,46 +27,22 @@
                 <table mat-table [dataSource]='featured' class='w-100'>
                   <ng-container matColumnDef='name'>
                     <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.NAME | titlecase}}
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <mat-icon
-                            style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{true ? "keyboard_arrow_up" : "keyboard_arrow_down"}}</mat-icon>
-                          <button mat-icon-button class='mr-3'>
-                            <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
-                          </button>
-                        </div>
-                      </div>
+                      {{constantDataService.FIELD_NAME.NAME | titlecase}}
                     </th>
                     <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
+                        [matTooltip]='element.name'> {{(element.name | titlecase) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='location'>
-                    <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{"Screen"}}
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <mat-icon
-                            style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{true ? "keyboard_arrow_up" : "keyboard_arrow_down"}}</mat-icon>
-                          <button mat-icon-button class='mr-3'>
-                            <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
-                          </button>
-                        </div>
-                      </div>
-                    </th>
+                    <th mat-header-cell *matHeaderCellDef>Screen</th>
                     <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.location'> {{(element.location | maxStringLimit) || '--'}} </td>
+                        [matTooltip]='element.location'> {{(element.location | titlecase) || '--'}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='updated_at'>
                     <th mat-header-cell *matHeaderCellDef>
                       <div class='d-flex align-items-center justify-content-between'>
                   <span>
-                    {{constantDataService.FIELD_NAME.DATE_MODIFIED| titlecase}}
+                    {{constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase}}
                   </span>
                         <div class='d-flex align-items-center'>
                           <button mat-icon-button class='mr-3'>
@@ -81,23 +57,16 @@
                   </ng-container>
 
                   <ng-container matColumnDef='items'>
-                    <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{"Items"}}
-                  </span>
-                      </div>
-                    </th>
-                    <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.items'> {{(element.items | maxStringLimit) || '--'}}  </td>
+                    <th mat-header-cell *matHeaderCellDef [width]='100'>Items</th>
+                    <td mat-cell *matCellDef='let element'> {{element.items || 0}}  </td>
                   </ng-container>
 
                   <ng-container matColumnDef='action'>
                     <th mat-header-cell *matHeaderCellDef
-                        [width]='30'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
+                        [width]='100'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
                     <td mat-cell *matCellDef='let row'>
-                              <button mat-stroked-button color='primary' class='my-2' [routerLink]="['/featured','edit', row.name, row.location]" >
-                                {{"Edit"}}
+                              <button [disabled]='!row.id' mat-icon-button color='primary' class='my-2' [routerLink]="['/featured','edit', row.id]" >
+                                <mat-icon style='font-size: 16px'>create</mat-icon>
                               </button>
                     </td>
                   </ng-container>
