--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -426,3 +426,10 @@ table.mat-table {
     background-color: #e0e0e0;
   }
 }
+
+.content-container {
+  max-height: 100vh;
+  overflow-y: auto;
+  padding: 0 0.4rem;
+  margin: 0.55rem 0 0;
+}
