--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -11,7 +11,7 @@
         <button
           mat-flat-button
           class='ml-3'
-          color='primary' type='submit' [disabled]="(store.isLoading$ | async ) || (store.loaded$ | async) ">
+          color='primary' type='submit' [disabled]='(store.isLoading$ | async ) || (store.loaded$ | async) '>
           Save
         </button>
       </div>
@@ -19,206 +19,127 @@
   </div>
   <div class='container-fluid p-0'>
     <div class='row'>
-      <ng-template [ngIf]='store.selectedFeatured$ | async' let-feature>
-        <!--        Feature Packs-->
-        <ng-template [ngIf]='feature.name === featuredType.FEATURED_PACKS'>
-          <div class='col-lg-6 col-12'>
-            <mat-card>
-              <mat-card-content>
-                <div class='container-fluid p-0 '>
-                  <div class='row mb-3'>
-                    <div class='col-12'>
-                      <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                        General</h5>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.LOCATION | titlecase'
-                        controlPath='location'
-                      ></hidden-innovation-common-form-field>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.RAIL_NAME | titlecase'
-                        controlPath='name'
-                      ></hidden-innovation-common-form-field>
-                    </div>
+      <div class='col-lg-6 col-12'>
+        <mat-card>
+          <mat-card-content>
+            <div class='container-fluid p-0 '>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                    General</h5>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <hidden-innovation-common-form-field
+                    [label]='constantDataService.FIELD_NAME.LOCATION | titlecase'
+                    controlPath='location'
+                  ></hidden-innovation-common-form-field>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <hidden-innovation-common-form-field
+                    [label]='constantDataService.FIELD_NAME.RAIL_NAME | titlecase'
+                    controlPath='name'
+                  ></hidden-innovation-common-form-field>
+                </div>
+              </div>
+              <ng-template [ngIf]='selectedFeatured?.name === featuredType.SPOTLIGHT'>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <hidden-innovation-common-form-field
+                      [label]='constantDataService.FIELD_NAME.HEADING | titlecase'
+                      controlPath='heading'
+                    ></hidden-innovation-common-form-field>
                   </div>
                 </div>
-              </mat-card-content>
-            </mat-card>
-          </div>
-        </ng-template>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <hidden-innovation-common-form-field
+                      [label]='constantDataService.FIELD_NAME.SUB_HEADING | titlecase'
+                      controlPath='subHeading'
+                    ></hidden-innovation-common-form-field>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <hidden-innovation-common-form-field
+                      [label]='constantDataService.FIELD_NAME.BOTTOM_TEXT | titlecase'
+                      controlPath='bottomText'
+                    ></hidden-innovation-common-form-field>
+                  </div>
+                </div>
+              </ng-template>
+            </div>
 
-        <!--        Feature Test-->
-        <ng-template [ngIf]='feature.name === featuredType.FEATURED_TESTS'>
-          <div class='col-lg-6 col-12'>
-            <mat-card>
-              <mat-card-content>
-                <div class='container-fluid p-0 '>
-                  <div class='row mb-3'>
-                    <div class='col-12'>
-                      <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                        General</h5>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.LOCATION | titlecase'
-                        controlPath='location'
-                      ></hidden-innovation-common-form-field>
-                    </div>
+            <ng-template [ngIf]='selectedFeatured?.name === featuredType.SPOTLIGHT'>
+              <div class='container-fluid p-0 '>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
+                      Media</h5>
                   </div>
                 </div>
-              </mat-card-content>
-            </mat-card>
-          </div>
-        </ng-template>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <p class='text-muted mb-2'>Poster</p>
+                    <hidden-innovation-common-form-field-image
+                      controlPath='posterId'
+                      [setImageData]='selectedFeatured?.poster'
+                      [aspectRatio]='aspectRatio.CUBE'
+                      [parentCtrl]='posterIDctrl'
+                      (emitImageCtrlData)='posterIDctrl?.setValue($event)'
+                      (emitRemoveImage)='posterIDctrl?.reset($event)'
+                    ></hidden-innovation-common-form-field-image>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+          </mat-card-content>
+        </mat-card>
+      </div>
 
-        <!--        Spotlight-->
-        <ng-template [ngIf]='feature.name === featuredType.SPOTLIGHT'>
-          <div class='col-lg-6 col-12'>
-            <mat-card>
-              <mat-card-content>
-                <div class='container-fluid p-0 '>
-                  <div class='row mb-3'>
-                    <div class='col-12'>
-                      <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                        General</h5>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.LOCATION | titlecase'
-                        controlPath='location'
-                      ></hidden-innovation-common-form-field>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.RAIL_NAME | titlecase'
-                        controlPath='name'
-                      ></hidden-innovation-common-form-field>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.HEADING | titlecase'
-                        controlPath='heading'
-                      ></hidden-innovation-common-form-field>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.SUB_HEADING | titlecase'
-                        controlPath='subHeading'
-                      ></hidden-innovation-common-form-field>
-                    </div>
-                  </div>
-                  <div class='row mb-2'>
-                    <div class='col-12'>
-                      <hidden-innovation-common-form-field
-                        [label]='constantDataService.FIELD_NAME.BOTTOM_TEXT | titlecase'
-                        controlPath='bottomText'
-                      ></hidden-innovation-common-form-field>
-                    </div>
-                  </div>
-                </div>
-                <div class='container-fluid p-0 '>
-                  <div class='row mb-3'>
-                    <div class='col-12'>
-                      <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
-                        Media</h5>
-                    </div>
-                  </div>
-                  <div class='row mb-3'>
-                    <div class='col-12'>
-                      <p class='text-muted mb-2'>Poster</p>
-                      <hidden-innovation-common-form-field-image
-                        controlPath='posterId'
-                        [setImageData]='selectedFeatured?.poster'
-                        [aspectRatio]='aspectRatio.CUBE'
-                        [parentCtrl]='posterIDctrl'
-                        (emitImageCtrlData)='posterIDctrl?.setValue($event)'
-                        (emitRemoveImage)='posterIDctrl?.reset($event)'
-                      ></hidden-innovation-common-form-field-image>
-                    </div>
-                  </div>
-                </div>
-              </mat-card-content>
-            </mat-card>
-          </div>
-        </ng-template>
-      </ng-template>
       <!--      Content Section-->
       <div class='col-lg-6 col-12'>
         <mat-card>
           <mat-card-title class='d-flex justify-content-between align-items-center'>
             <h3 class='mat-h3 mb-0 font-sf-pro'>Contents</h3>
             <button
+              [disabled]='(store.isActing$ | async)'
               mat-flat-button
               class='ml-3'
               [matMenuTriggerFor]='menuPack'
-              color='primary' type='submit'>
+              color='primary' type='button'>
               Add
             </button>
             <mat-menu #menuPack='matMenu'>
-              <button mat-menu-item (click)='openTestSelector()'>
-                <span>Test</span>
+              <button type='button' mat-menu-item (click)='openTestSelector()'>
+                <span>Test Single</span>
               </button>
-              <button mat-menu-item>
+              <button type='button' mat-menu-item>
                 <span>Test Group</span>
               </button>
-              <button mat-menu-item>
-                <span>Packs</span>
-              </button>
-              <button mat-menu-item>
+              <button type='button' mat-menu-item >
                 <span>Questionnaire</span>
+              </button>
+              <button type='button' mat-menu-item>
+                <span>Lessons</span>
               </button>
             </mat-menu>
           </mat-card-title>
           <mat-divider></mat-divider>
-          <mat-card-content>
-
-            <div class='pt-3' cdkDrag>
-              <mat-card class='question-card mat-elevation-z3 pt-1 pr-1'>
-                <div class='d-flex align-items-center justify-content-between'>
-                  <h4 class='mat-h4 mb-0 font-weight-bold'>Luke Woolley’s High Performance Pack</h4>
-                  <div>
-                    <button type='button' mat-icon-button [matMenuTriggerFor]='menu'>
-                      <mat-icon>more_vert</mat-icon>
-                    </button>
-                    <mat-menu #menu='matMenu'>
-                      <button type='button' mat-menu-item>
-                        <mat-icon>create</mat-icon>
-                        <span>Edit</span>
-                      </button>
-                      <button type='button' mat-menu-item>
-                        <mat-icon>delete</mat-icon>
-                        <span>Delete</span>
-                      </button>
-                    </mat-menu>
-                  </div>
-                </div>
-                <h5
-                  class='mat-h5 d-flex align-items-center text-color__primary mb-0 mr-2 type-icon font-calibri'>
-                  <mat-icon class='d-flex align-items-center' aria-hidden='false' aria-label='fiber manual record'>
-                    fiber_manual_record
-                  </mat-icon>
-                  <span>Pack</span>
-                </h5>
-              </mat-card>
-            </div>
-
+          <mat-card-content class='content-container'>
+            <ng-template [ngIf]='uiStore.testsExists$ | async'>
+              <hidden-innovation-pack-content-card
+                class='mb-3'
+                *ngFor='let content of (uiStore.selectedTests$ | async); index as i; first as isFirst; last as isLast'
+                [ngClass]='{"mt-2" : isFirst, "mb-0": isLast }'
+                [name]='content.name'
+                [category]='packContentTypeEnum.SINGLE'
+                (emitDeleteEvent)='null'
+              ></hidden-innovation-pack-content-card>
+            </ng-template>
           </mat-card-content>
         </mat-card>
       </div>
